--- a/Presentation/Products.API/appsettings.json
+++ b/Presentation/Products.API/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "DbConnection": "Data Source=.;Initial Catalog=SalesApp;Integrated Security=True",
+  "DbConnection": "Data Source=.;Initial Catalog=BlackMarketUA;Integrated Security=True",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
