--- a/Products.API/appsettings.json
+++ b/Products.API/appsettings.json
@@ -1,5 +1,6 @@
 {
-  "DbConnection": "Data Source=.;Initial Catalog=BlackMarketUA;Integrated Security=True",
+  //"DbConnection": "Data Source=.;Initial Catalog=BlackMarketUA;Integrated Security=True",
+  "DbConnection": "Server=tcp:antonpro100.database.windows.net,1433;Initial Catalog=BlackMarketUa;Persist Security Info=False;User ID=antonpro100;Password=100Rage69;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
