--- a/Products.API/Properties/launchSettings.json
+++ b/Products.API/Properties/launchSettings.json
@@ -11,10 +11,11 @@
     "Products": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:7176;http://localhost:5176",
+      "applicationUrl": "https://localhost:8001;http://localhost:8000",
       "dotnetRunMessages": true
     },
     "IIS Express": {
